# cifar_mlrf

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
MLRF/: __init__.py  dataset.py  features.py  model_utils.py  plots.py  setup.py
MLRF/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md
notebooks/: decision_boundaries.ipynb  model.ipynb  verif_features.ipynb  verif_steps.ipynb
references/: README.md  links.txt
