[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "MLRF"
version = "1.0.0"
description = "Projet de reconnaissance d'images associées à 10 classes différentes, à partir de la base de donnée CIFAR-10."
authors = [
  { name = "Nicolas \u0026 Camile" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers= [
            "Development Status :: 3 - Alpha",
            "Intended Audience :: Education",
            "Programming Language :: Python :: 2",
            "Programming Language :: Python :: 3",
            "Operating System :: MacOS :: MacOS X",
            "Operating System :: Microsoft :: Windows",
        ]
requires-python = ">=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["MLRF"]
force_sort_within_sections = true
